Started the assignment.

--- a/CISP430A4/CISP430A4/CISP430A4.vcxproj.filters
+++ b/CISP430A4/CISP430A4/CISP430A4.vcxproj.filters
@@ -23,7 +23,7 @@
     <ClCompile Include="pqexam1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="pqtest.cpp">
+    <ClCompile Include="pqueue1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
