Setting up a foundation.

--- a/CISP430A4/CISP430A4/CISP430A4.vcxproj.filters
+++ b/CISP430A4/CISP430A4/CISP430A4.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="pqtest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="pqueue1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
