--- a/CISP430A4/CISP430A4/CISP430A4.vcxproj
+++ b/CISP430A4/CISP430A4/CISP430A4.vcxproj
@@ -116,6 +116,7 @@
   <ItemGroup>
     <ClCompile Include="pqexam1.cpp" />
     <ClCompile Include="pqtest.cpp" />
+    <ClCompile Include="pqueue1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
